<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:hint="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            app:layout_constraintEnd_toStartOf="@id/arrowImage"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/phoneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            app:layout_constraintEnd_toStartOf="@id/arrowImage"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            app:layout_constraintEnd_toStartOf="@id/arrowImage"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/arrowImage"
            android:layout_width="13dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_arrow"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
